--- a/ref.bib
+++ b/ref.bib
@@ -735,3 +735,17 @@ Internet of things CISCO
   year={2018},
   publisher={Universidad de las Ciencias Inform{\'a}ticas}
 }
+
+@article{carrasco,
+  author          = {J. Hu, H. Niu, J. Carrasco and cols.},
+  journal         = {Aerospace Science and Technology},
+  title           = {Fault-tolerant cooperative navigation of networked UAV swarms for wildfire surveillance},
+  year            = {2022}
+}
+
+@article{lennox,
+  author          = {J. Hu, B. Lennox y F. Arvin},
+  journal         = {Automatica},
+  title           = {Robust formation control for networked robotic systems using Negative Imaginary dynamics},
+  year            = {2022}
+}
