--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -333,8 +333,9 @@
 
     \subsection{Temperatura}
 
-    Valores de temperatura idóneos para la aparición de xilófagos...
+    La temperatura es otro de los factores que contribuye a la aparición de los xilófagos. Según Vázquez y cols. \cite{vazquez1999avetianella}, en un experimento sobre las condiciones necesarias para la cría de plaga, parásitos y xilófagos, plantea que si estos valores de temperatura oscilan entre los 23°C y los 30°C se crean las condiciones para la aprición y reproducción de especies xilófagas. 
 
+    Por otra parte Flores y Pérez \cite{floresDurabilidadNaturalDiez1987a}, en un estudio sobre los hongos xilófagos plantean que el rango de temperatura idónea para la reproducción de estos xilófagos se encuentra entre los 20°C y los 30°C, existiendo también el caso de que aún con 38°C exista la posibilidad de reproducción en algunas especies, así como Avalos Díaz y cols. \cite{avalosdiazInfluenciaDosHongos2020} que en una de sus publicaciones se define que la temperatura idónea para el surgimiento de colonias xilófagas es de 27°C +- 1.\\ 
 
     %\section{Sistema de control de población}\label{sec: sistemaPoblacion}
     %Sensores PIR\\
