--- a/ref.bib
+++ b/ref.bib
@@ -749,3 +749,24 @@ Internet of things CISCO
   title           = {Robust formation control for networked robotic systems using Negative Imaginary dynamics},
   year            = {2022}
 }
+
+@article{floresDurabilidadNaturalDiez1987a,
+	title = {Durabilidad natural de diez maderas de madre de dios a la accion de tres hongos xilofagos},
+	volume = {14},
+	number = {1},
+	journal = {Revista Forestal del Perú},
+	author = {Flores, Victor Raúl Gonzáles and Pérez, Alberto Yataco},
+	year = {1987}
+}
+
+@article{avalosdiazInfluenciaDosHongos2020,
+	title = {Influencia de dos hongos xilófagos sobre la durabilidad natural de diez especies maderables de {Ucayali}, {Perú}},
+	volume = {8},
+	number = {3},
+	journal = {Revista Cubana de Ciencias Forestales},
+	author = {Avalos Díaz, Ayda Guisella and Aviles Sandi, Jhnon Edwar},
+	year = {2020},
+	note = {Publisher: Universidad de Pinar del Río Hermanos Saíz Montes de Oca},
+	pages = {425--438}
+}
+	
