--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -93,7 +93,7 @@
     En síntesis, se puede afimar que la gestión de la colección de Artes y Arqueología Francisco Prat Puig carece de una intervención tecnológica que favorezca la calidad en la toma de decisiones para su conversacion preventiva.\\
 
     La colección Francisco Prat Puig está distribuida de tal modo que las piezas están ubicadas en tres salas. Enumerándolas: sala 1, sala 2 y sala 3.\\
-    La sala 1 (Exposición permanente) (figura \ref{imag:sala_1}) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan piezas de cerámica, marfil, metal, piedra, madera, entre otros materiales, así como colecciones de numismática.\newline
+    La sala 1 (figura \ref{imag:sala_1}) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan piezas de cerámica, marfil, metal, piedra, madera, entre otros materiales, así como colecciones de numismática.\newline
     
     \begin{figure}[H]
         \centering
@@ -102,11 +102,19 @@
         \label{imag:sala_1}
     \end{figure}
 
+    \newpage
+
     En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, estas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local.
 
     [Imagen de la sala 2]\newline
-    Dentro de la sala 3 se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
-    [Imagen sala 3]\newline
+    Dentro de la sala 3 (figura \ref{imag:sala_3}) se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
+    
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=8cm, height=6cm]{imagenes/sala_3.jpeg}
+        \caption{Sala Memorial}
+        \label{imag:sala_3}
+    \end{figure}
 
     En el gráfico que se muestra a continuación se relaciona el valor cuantitativo de las principales formas en las que se exponen las piezas dentro de estas salas pertenecientes a la colección.
 
@@ -241,6 +249,8 @@
         \subcaption*{Fuente: Elaboración propia}
         \label{imag:capa_percepcion}
     \end{figure}
+
+    \newpage
 
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.4.2.1\hspace{5mm}Nodos}
     \textbf{1.4.2.1\hspace{5mm}Nodos}
