--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -1,4 +1,4 @@
-\chapter{Implementación del sistema basado en IoT}\label{cap: }
+\chapter{Implementación del sistema IoT}\label{cap: }
 
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
@@ -35,7 +35,7 @@ Ahora, ¿por qué no se tomó ninguno de estos?
     \label{imag:esquematico_nodo}
 \end{figure}
 
-A continuación se describen por partes los elementos que componen dichos nodos.
+A continuación, se describen por partes los elementos que componen dichos nodos.
 
 
 \subsection{Microcontrolador} \label{sec: microcontrolador}
@@ -149,7 +149,7 @@ A continuación se describen por partes los elementos que componen dichos nodos.
         \item Precisión
         \item Voltaje de alimentación
         \item Corriente de alimentación
-        \item Precio de referencia
+        \item Precio
     \end{itemize}
 
     \vspace{1cm}
@@ -197,8 +197,8 @@ Se tomaron precios de referencia de los sensores de las páginas oficiales de co
 
 \subsection{Descripción sensores} \label{subsec: descripcion_sensores}
 
-\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.2.1.1\hspace{5mm}Sensor DHT22}
-        \textbf{2.2.1.1\hspace{5mm}Sensor DHT22}
+\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.1.3.1\hspace{5mm}Sensor DHT22}
+        \textbf{2.1.3.1\hspace{5mm}Sensor DHT22}
 
   \begin{figure}[H]
       \centering
@@ -220,8 +220,8 @@ El DHT22 (AM2302) es un sensor digital de temperatura y humedad relativa de buen
 
 \vspace{1cm}
 
-\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.2.1.2\hspace{5mm}Sensor MZ-Z19C}
-        \textbf{2.2.1.2\hspace{5mm}Sensor MZ-Z19C}
+\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.1.3.2\hspace{5mm}Sensor MZ-Z19C}
+        \textbf{2.1.3.2\hspace{5mm}Sensor MZ-Z19C}
 
 \begin{figure}[H]
       \centering
@@ -244,8 +244,8 @@ El sensor de gas de dióxido de carbono MH-Z19C es un pequeño sensor inteligent
 
 \vspace{0.5cm}
 
-\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.2.1.3\hspace{5mm}Sensor M0168}
-        \textbf{2.2.1.3\hspace{5mm}Sensor M0168}
+\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.1.3.3\hspace{5mm}Sensor M0168}
+        \textbf{2.1.3.3\hspace{5mm}Sensor M0168}
 
 \begin{figure}[H]
       \centering
@@ -268,8 +268,8 @@ En este sensor piezoeléctrico cuando el choque de la cerámica con la lámina m
 
 \newpage
 
-\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.2.1.4\hspace{5mm}Sensor SDS011}
-        \textbf{2.2.1.4\hspace{5mm}Sensor SDS011}
+\addcontentsline{toc}{subsection}{\hspace{1.3cm}2.1.3.4\hspace{5mm}Sensor SDS011}
+        \textbf{2.1.3.4\hspace{5mm}Sensor SDS011}
 
 \vspace{1cm}
 
