--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -25,7 +25,7 @@
     El análisis de la situación descrita permite identificar como \textbf{problema de investigación} la necesidad de un sistema de supervisión para conocer en tiempo real el estado de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
     \textbf{objeto de la investigación:} sistema basado en IoT para la supervisión de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la Colección Prat. Como \textbf{campo de acción} los sistemas de supervisión basados en IoT para la conservación de las piezas en los museos.
 
-    Se plantea como \textbf{hipótesis} que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en la Colección Prat, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración, estaríamos ... y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
+    Se plantea como \textbf{hipótesis}, que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en la Colección Prat, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración, estaríamos extendiendo la vigencia de las piezas  y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
     
     \newpage
     
