--- a/ref.bib
+++ b/ref.bib
@@ -769,4 +769,72 @@ Internet of things CISCO
 	note = {Publisher: Universidad de Pinar del Río Hermanos Saíz Montes de Oca},
 	pages = {425--438}
 }
-	
+
+@book{bachmann1992conservation,
+  title={Conservation concerns: a guide for collectors and curators},
+  author={Bachmann, Konstanze},
+  year={1992},
+  publisher={Smithsonian Institution}
+}
+
+@article{chipanamezaEvaluacionConcentracionesCO22020,
+	title = {Evaluación de las concentraciones de {CO2} en interiores y su influencia en la salud de los estudiantes de la {Universidad} {Peruana} {Unión}},
+	author = {Chipana Meza, Mayra Marucela and Matos Zavaleta, Nataly},
+	year = {2020}
+}
+
+
+@article{marquezAgentesDeterioroMedioambientales2016,
+	title = {Agentes de deterioro medioambientales: planificar la conservación de las obras de arte},
+	shorttitle = {Agentes de deterioro medioambientales},
+	number = {11},
+	journal = {Opción: Revista de Ciencias Humanas y Sociales},
+	author = {Márquez, María del Carmen Bellido},
+	year = {2016},
+	pages = {54--74}
+}
+
+@book{thomsonMuseumEnvironment2018,
+  title={The museum environment},
+  author={Thomson, Garry},
+  year={2018},
+  publisher={Routledge}
+}
+
+@book{merrittPreventiveConservationHistoric2010,
+	title = {Preventive {Conservation} for {Historic} {House} {Museums}},
+	isbn = {978-0-7591-1217-9},
+	abstract = {Preventive Conservation for Historic House Museums is a primer on the preventive care practices that these unique sites need to slow the rate of deterioration and prevent damage and wear to the property and its collections. It proposes a collaborative approach to preservation planning that is based on interdisciplinary research, critical thinking, and observation rather than rote maintenance schedules and everyday residential cleaning practices. The authors recommend that sites have documents and plans in place that direct the intellectual and physical control of the collections and site. The intellectual controls include administrative and management policies and procedures; the physical controls include security and safety precautions, routine maintenance and cleaning practices among others. Historic house administrators, staff, board members, and volunteers will find this volume indispensable. Professionals who deal with historic sites from the museum administrator or curator, to architect, to engineer, as well as students pursuing studies in the field of preservation and conservation will also find this a valuable reference. This volume promotes a pro-active approach to preservation planning for historic sites and their collections.},
+	language = {en},
+	publisher = {Rowman \& Littlefield},
+	author = {Merritt, Jane and Reilly, Julie A.},
+	year = {2010},
+	note = {Google-Books-ID: sTaZ69GEOkIC}
+}
+
+@book{buysConservationRestorationCeramics2014,
+  title={Conservation and restoration of ceramics},
+  author={Buys, Susan and Oakley, Victoria},
+  year={2014},
+  publisher={Routledge}
+}
+
+@article{garciaherasInnovationGestionConservacion2015,
+  title={Innovaci{\'o}n y gesti{\'o}n de la conservaci{\'o}n preventiva en museos: un ejemplo con colecciones de vidrio y materiales cer{\'a}micos},
+  author={Garc{\'\i}a Heras, Manuel and Villegas Broncano, Mar{\'\i}a {\'A}ngeles},
+  year={2015},
+  publisher={Instituto Andaluz del Patrimonio Hist{\'o}rico}
+}
+
+@misc{koobConservationRestorationGlass2004,
+  title={Conservation and Restoration of Glass},
+  author={Koob, Stephen P},
+  year={2005},
+  publisher={JSTOR}
+}
+
+@article{recioalvaroConservacionPreventivaExposiciones2020,
+  title={La conservaci{\'o}n preventiva en exposiciones temporales:" Y{\`\i} L{\'a}i Colectivo"},
+  author={Recio {\'A}lvaro, Marta},
+  year={2020}
+}
