--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -355,6 +355,8 @@
     es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser defiidos en la propuesta y permitan mantener la colección en buen estado de conservación.
     Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rigan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
     
+    \newpage
+
     \section{Condiciones que favorecen el ataque de insectos xilófagos}
 
     El biodeterioro también constituye otro de los factores que afectan las obras de arte. Estos agentes biológicos están formados por microorganismos (bacterias) y organismos vivos como los vertebrados (aves, roedores), insectos (escarabajos, hormigas, avispas, abejas), insectos xilófagos (termitas y carcomas), moluscos (polas y gusanos de barco) crustáceos (limnorias), hongos, líquenes, algas y el propio hombre \cite{marquezAgentesDeterioroMedioambientales2016}.
